# Amapa-Lungs

./: .gitignore  dados_fontes.md  main.py  pyproject.toml  requirements.txt  run_cnn.py  run_cnn_evaluation.py  run_feature_eng.py  run_feature_evaluation.py
amapa_ar/: config.py
amapa_ar/data/: extract_features.py  preprocessing.py
amapa_ar/evaluation/: evaluate.py  evaluate_cnn.py  evaluate_svm.py
amapa_ar/models/: cnn.py  feature_engineering.py
amapa_ar/models/anomaly_detectors/: anomaly_detector.py  anomaly_detector_autoencoder.py
amapa_ar/pipelines/: feature_extract_pipeline.py  train_cnn_pipeline.py  train_feature_eng.py  training_pipeline.py
amapa_ar/utils/: images_utils.py
docs/br/: identificacao_doencas.md
docs/en/: Introduction.md
notebooks/: analysis.ipynb
reports/: EfficientNetB0_classification_report.csv  ResNet50_classification_report.csv
