[tool.poetry]
name = "amapa-ar"
version = "0.1.0"
description = ""
authors = ["печа <pedrovianaasking@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.18.0"
keras = "^3.6.0"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.2"
notebook = "^7.2.2"
jupyterlab = "^4.3.0"
seaborn = "^0.13.2"
xgboost = "^2.1.2"
scikit-image = "^0.24.0"
cython = "^3.0.11"
tensorflow-cpu = "^2.18.0"
dvc = "^3.56.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
